---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: xx. xx. 2019
  Fixes:
    - Fixed electromagnetism lab research required 15x10 potions instead of 15x1
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 26. 07. 2019
  Fixes:
    - Fixed the lab mk0 didn't have it's intermediates unlocked
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 24. 07. 2019
  Fixes:
    - Fixed manual automation science recipe
    - Fixed icon overlays
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 27. 04. 2019
  Features:
    - Updated to work with the bob angels extension
---------------------------------------------------------------------------------------------------
Version: 0.2.0 - 0.17 release
Date: 18. 03. 2019
  Features:
    - Updated to 0.17
  Modding:
    - Updated overal use of the LSlib
    - Labs now (should) accept science packs from other mods
---------------------------------------------------------------------------------------------------
Version: 0.1.11
Date: 10. 1. 2019
  Fixes:
    - Fixed that intermediates for Logistic Handling Set Fluid where not on the tech tree
---------------------------------------------------------------------------------------------------
Version: 0.1.10
Date: 15. 9. 2018
  Changes:
    - Removed iron pickaxe required for red science fluid.
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 15. 9. 2018
  Fixes:
    - Fixed crafting time of science packs was altered
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 12. 9. 2018
  Fixes:
    - Fixed localized names of science barrels was not adapted to the new fluid names