@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.4
-Date: xx. xx. 2019
+Date: 02. 08. 2019
   Fixes:
     - Fixed electromagnetism lab research required 15x10 potions instead of 15x1
+    - Fixed loading error when using More Science version 0.2.9
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.3
 Date: 26. 07. 2019
